cluster/network_policies/deny-egress-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny-egress
spec:
  endpointSelector:
    matchLabels: {}
  egress: []
